--- a/resources/scss/_vars.scss
+++ b/resources/scss/_vars.scss
@@ -1,6 +1,8 @@
 // Colors
 $black: #1c1c1c;
 $blue: #0282f9;
+$darkblue: #003f5e;
 $grey: #303030;
 $lightgrey: #7d8888;
 $green: #55BA59;
+$lightgreen: #BAF77C;
